--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="styles.css">
+<link rel="manifest" href="app.webmanifest">
 
 <script src="js/handlers.js" defer></script>
 <script src="js/app.js" defer></script>
