--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="styles.css">
 <link rel="manifest" href="app.webmanifest">
+<link rel="apple-touch-icon" href="icons/icon-1024.png">
 
 <script src="js/handlers.js" defer></script>
 <script src="js/app.js" defer></script>
