Add Color Theme

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="styles.css">
 <link rel="manifest" href="app.webmanifest">
 <link rel="apple-touch-icon" href="icons/icon-1024.png">
+<meta name="theme-color" content="#bb7162">
 
 <script src="js/handlers.js" defer></script>
 <script src="js/app.js" defer></script>
